# hof-engine

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  hatch_build.py  pyproject.toml
.github/workflows/: auto-release.yml  ci.yml  publish-testpypi.yml  publish.yml
docs/: DISTRIBUTION_ROADMAP.md
docs/examples/: document-processing.md
docs/guide/: getting-started.md
docs/reference/: agent.md  browser.md  cli.md  config.md  cron.md  flows.md  functions.md  llm.md  tables.md  ui.md
example/: README.md  hof.config.py
example/cron/: re_enrich.py
example/flows/: enrich_lead.py
example/functions/: leads.py
example/tables/: lead.py
example/ui/: index.html  package.json  tsconfig.json
example/ui/components/: LeadReview.tsx
example/ui/pages/: index.tsx  leads.tsx
hof/: __init__.py  app.py  components-manifest.json  config.py  errors.py  functions.py  logging_config.py  scaffold.py
hof-react/: README.md  package-lock.json  package.json  tsconfig.json
hof-react/docs/: plan-todo-contract.md
hof-react/locales/de/: hofEngine.json
hof-react/locales/en/: hofEngine.json
hof-react/src/: hofEngine.i18n.test.ts  index.ts  reactI18nextStableOpts.ts
hof-react/src/agent/: AssistantMarkdown.test.ts  AssistantMarkdown.tsx  FunctionResultDisplay.tsx  HofAgentChat.tsx  HofAgentChatBlocks.tsx  HofAgentComposer.tsx  HofAgentConversationPanel.tsx  HofAgentConversationSelect.tsx  HofAgentInboxReviewBar.tsx  HofAgentMessages.tsx  HofAgentPendingApprovalBar.tsx  HofAgentPlanCard.tsx  HofAgentPlanCardSkeleton.tsx  (+56 more)
hof/agent/: __init__.py  builtin_tools.py  conversation_state.py  extensions.py  http_mutation_gate.py  plan_types.py  policy.py  state.py  stream.py  stream_cancel.py  subagent.py  tooling.py
hof/api/: __init__.py  auth.py  extensions.py  server.py
hof/browser/: __init__.py  config.py  constants.py  events.py  runner.py  sensitive.py  store.py  stream_bridge.py  tools.py  web_session_view.py
hof/cli/: api_client.py  main.py  result_render.py
hof/core/: __init__.py  discovery.py  registry.py  types.py
hof/cron/: __init__.py  scheduler.py
hof/db/: __init__.py  alembic_hooks.py  engine.py  ensure_db.py  migrations.py  schemas.py  table.py  window.py
hof/docs/: __init__.py  router.py
hof/files/: __init__.py  processors.py  storage.py
hof/flows/: __init__.py  executor.py  flow.py  human.py  models.py  node.py  state.py
hof/llm/: __init__.py  decorators.py  provider.py
hof/tasks/: __init__.py  celery_app.py  worker.py
hof/ui/: __init__.py  vite.py
tests/: conftest.py  test_agent.py  test_agent_extensions_merge.py  test_agent_pre_call_validator.py  test_agent_tooling_compose.py  test_api.py  test_browser_tool.py  test_builtin_agent_tools.py  test_cli_add.py  test_cli_flow.py  test_cli_fn.py  test_components_manifest.py  test_config_find_root.py  test_conversation_state.py  test_core_discovery.py  test_core_registry.py  test_core_types.py  test_cron.py  test_db_engine.py  test_db_table.py  test_db_window.py  test_flows_executor.py  test_flows_flow.py  test_flows_node.py  test_flows_state.py  test_functions.py  test_http_mutation_gate.py  test_llm.py  test_plan_types.py  test_result_render.py  test_sandbox_required_mutations.py  test_scaffold.py  test_subagent_max_rounds.py  test_vite.py  test_web_session_store_merge.py  test_web_session_view.py
(+73 files in other folders)
