[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hof-engine"
version = "0.1.85"
description = "Full-stack Python + React framework for building applications with workflows, tables, UIs, and LLM integration."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Johannes Hoetter" },
]
keywords = ["framework", "full-stack", "workflow", "react", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "websockets>=14.0",
    # Agent streaming (stream_agent_turn, AgentSegmentStart, ReasoningMode.fallback). Pin matches below;
    # Pin llm-markdown to the version containing failure_info and AgentRateLimitWait.
    "llm-markdown[openai,anthropic]>=0.3.18",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "docker>=7.0.0",
    "simpleeval>=1.0.7",
    # Browser Use Cloud (`hof_builtin_browse_web`, /api/web-sessions).
    "browser-use-sdk>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[project.scripts]
hof = "hof.cli.main:app"

[project.urls]
Homepage = "https://github.com/jhoetter/hof-engine"
Documentation = "https://github.com/jhoetter/hof-engine/tree/main/docs"
Repository = "https://github.com/jhoetter/hof-engine"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["hof"]
exclude = [
    "hof/ui/admin/node_modules/**",
]

[tool.hatch.build.targets.wheel.force-include]
"hof/ui/admin/dist" = "hof/ui/admin/dist"
"hof-react/dist" = "hof-react/dist"
"hof-react/package.json" = "hof-react/package.json"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require external services (PostgreSQL, Redis)",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
no_strict_optional = true

# Until llm-markdown 0.3.8 is on PyPI, `uv lock` resolves from a sibling checkout.
# After release: delete this block and run `uv lock` so the lockfile uses the registry.
[tool.uv.sources]
llm-markdown = { path = "../llm-markdown", editable = true }
